# artery

./: CMakeLists.txt
scenarios/: CMakeLists.txt
scenarios/car2car-grid/results/: cam_bsp-#0.sca  cam_bsp-#0.vec
scenarios/ots-demo/: omnetpp.ini  services.xml
src/artery/: CMakeLists.txt
src/artery/application/: Middleware.cc
src/artery/ots/: GtuInetMobility.cc  GtuInetMobility.h  GtuPositionProvider.cc  GtuPositionProvider.h
src/artery/ros2/: CMakeLists.txt  Ros2Scheduler.cc  Ros2Scheduler.h  Ros2Service.cc  Ros2Service.h  Ros2Service.ned
src/ots/: BasicGtuLifecycleController.cc  BasicGtuLifecycleController.h  CMakeLists.txt  Core.cc  Core.h  Core.ned  RosNode.cc  RosNode.h
